kubernetes/frontend.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: planespotter-frontend
  namespace: planespotter
  labels:
    app: planespotter-frontend
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planespotter-frontend
  template:
    metadata:
      labels:
        app: planespotter-frontend
        tier: frontend
    spec:
      containers:
      - name: planespotter-frontend
        image: nvpnathan/planespotter-frontend:v1
        imagePullPolicy: IfNotPresent
      - name: telegraf
        image: wavefronthq/telegraf-sidecar
        ports:
        - name: udp-statsd
          containerPort: 8125
        - name: udp-8092
          containerPort: 8092
        - name: tcp-8094
          containerPort: 8094
        resources:
          requests:
            memory: 30Mi
            cpu: 100m
          limits:
            memory: 50Mi
            cpu: 200m
        volumeMounts:
        - name: telegraf-d
          mountPath: /etc/telegraf/telegraf.d
      volumes:
      - name: telegraf-d
        projected:
          sources:
          - configMap:
              name: telegraf-nginx-config
