kubernetes/redis.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-server
  namespace: planespotter
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-server
        tier: backend
    spec:
      containers:
      - name: redis-server
        image: redis
        ports:
        - containerPort: 6379
      - name: telegraf
        image: puckpuck/wavefront-telegraf
        ports:
        - name: udp-statsd
          containerPort: 8125
        - name: udp-8092
          containerPort: 8092
        - name: tcp-8094
          containerPort: 8094
        resources:
          requests:
            memory: 30Mi
            cpu: 100m
          limits:
            memory: 50Mi
            cpu: 200m
        volumeMounts:
        - name: telegraf-d
          mountPath: /etc/telegraf/telegraf.d
      volumes:
      - name: telegraf-d
        projected:
          sources:
          - configMap:
              name: telegraf-redis-config 
---
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  namespace: planespotter
  labels:
    app: redis-server
    tier: backend
spec:
  ports:
  - port: 6379
  selector:
    app: redis-server
    tier: backend
  clusterIP: None
